// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > Rendering > should match the snapshot with default props 1`] = `
<DocumentFragment>
  <header
    class="ons-header ons-header--internal"
  >
    <div
      class="ons-header__top"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
        >
          <div
            class="ons-grid__col ons-col-auto"
          >
            <a
              class="ons-header__org-logo-link"
              href="/"
            >
              <picture>
                <img
                  alt="Office for National Statistics logo"
                  class="ons-header__org-logo"
                  src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                />
              </picture>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ons-header__main"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
        >
          <div
            class="ons-grid__col ons-col-auto ons-u-flex-shrink"
          >
            <div
              class="ons-header__title"
            >
              ONS Service
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header > Rendering > should match the snapshot with navigation links 1`] = `
<DocumentFragment>
  <header
    class="ons-header ons-header--internal"
  >
    <div
      class="ons-header__top"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
        >
          <div
            class="ons-grid__col ons-col-auto"
          >
            <a
              class="ons-header__org-logo-link"
              href="/"
            >
              <picture>
                <img
                  alt="Office for National Statistics logo"
                  class="ons-header__org-logo"
                  src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                />
              </picture>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ons-header__main"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
        >
          <div
            class="ons-grid__col ons-col-auto ons-u-flex-shrink"
          >
            <div
              class="ons-header__title"
            >
              ONS Service
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ons-navigation-wrapper"
    >
      <div
        class="ons-container ons-container--gutterless@xxs@l"
      >
        <nav
          aria-label="Main menu"
          class="ons-navigation ons-navigation--main ons-js-navigation"
          data-analytics="header-navigation"
          id="main-nav"
        >
          <ul
            class="ons-navigation__list"
          >
            <li
              class="ons-navigation__item ons-navigation__item--active"
            >
              <a
                class="ons-navigation__link"
                href="/"
                id="home"
              >
                Home
              </a>
            </li>
            <li
              class="ons-navigation__item "
            >
              <a
                class="ons-navigation__link"
                href="/menu1"
                id="menu-1"
              >
                Menu #1
              </a>
            </li>
            <li
              class="ons-navigation__item "
            >
              <a
                class="ons-navigation__link"
                href="/menu2"
                id="menu-2"
              >
                Menu #2
              </a>
            </li>
            <li
              class="ons-navigation__item "
            >
              <a
                class="ons-navigation__link"
                href="/menu3"
                id="menu-3"
              >
                Menu #3
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header > Rendering > should match the snapshot with sign-out functionality 1`] = `
<DocumentFragment>
  <header
    class="ons-header ons-header--internal"
  >
    <div
      class="ons-header__top"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-header__grid-top ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
        >
          <div
            class="ons-grid__col ons-col-auto"
          >
            <a
              class="ons-header__org-logo-link"
              href="/"
            >
              <picture>
                <img
                  alt="Office for National Statistics logo"
                  class="ons-header__org-logo"
                  src="https://cdn.ons.gov.uk/sdc/design-system/31.4.0/img/ons-logo-neg-en.svg"
                />
              </picture>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ons-header__main"
    >
      <div
        class="ons-container"
      >
        <div
          class="ons-grid ons-grid--gutterless ons-grid--flex ons-grid--between ons-grid--vertical-center ons-grid--no-wrap"
        >
          <div
            class="ons-grid__col ons-col-auto ons-u-flex-shrink"
          >
            <div
              class="ons-header__title"
            >
              ONS Service
            </div>
          </div>
          <div
            class="ons-grid__col ons-col-auto ons-u-flex-no-shrink ons-u-d-no@xxs@m"
          >
            <button
              class="ons-btn ons-btn--ghost ons-btn--exit"
              data-test-id="signout-button"
              id="signout-button"
              type="button"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Save and sign out
                </span>
                <svg
                  aria-hidden="true"
                  class="ons-svg-icon ons-u-ml-xs"
                  focusable="false"
                  viewBox="0 0 12 12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.85,7.65l-2.5-2.5a.5.5,0,0,0-.71,0,.48.48,0,0,0-.15.36V7h-3a.5.5,0,0,0-.5.5v1a.5.5,0,0,0,.5.5h3v1.5A.49.49,0,0,0,11,11a.48.48,0,0,0,.34-.14l2.51-2.5a.49.49,0,0,0,0-.68Z"
                    transform="translate(-2 -2)"
                  />
                  <path
                    d="M8.5,14h-6a.5.5,0,0,1-.5-.5V2.5A.5.5,0,0,1,2.5,2h6a.5.5,0,0,1,.5.5V3a.5.5,0,0,1-.5.5h-5v9h5A.5.5,0,0,1,9,13v.5A.5.5,0,0,1,8.5,14Z"
                    transform="translate(-2 -2)"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
